# mdep_2

./: 13w_11t.yaml_backup  13w_11t_testload.yaml  13w_exotic.yaml  6w_11t.yaml  AB.h  CMakeLists.txt  README.md  ampl_to_SDM.py  amplitude.h  amplitude_functions.h  anchor_t.cxx  anchor_t.h  chi2.cxx  chi2.h  chi2_2d.cxx  chi2_2d.h  chi2py.cxx  cholesky.h  create_data_files.py  currentDateTime.h  fitmd.cc  full_SDM.cxx  full_SDM.h  full_covariance.cxx  full_covariance.cxx~  full_covariance.h  get_old_method_files.py  get_tabulated_integrals.py  invert33.h  invert_matrix.h  matrix_utilities.h  method.cxx  method.h  minimize.cxx  minimize.h  multinest.cc  old_method.cxx  old_method.h  parametrizations.yaml  parametrizations_13_waves.yaml  (+7 more)
compare/: get_detailed_chi2_dima.py
